@@ -1,7 +1,3 @@
-# Set this to a value from virtguest_supported_hypervisors
-# to force the corresponding backend to be invoked
-virtguest_force: ""
-
 virtguest_supported_hypervisors:
   - virtualbox
 
