@@ -1,2 +1,3 @@
 dependencies:
   - role: proxy
+  - role: virtguest_force
