@@ -1,9 +1,3 @@
-- name: Apply virtguest settings override
-  set_fact:
-    ansible_virtualization_role: guest
-    ansible_virtualization_type: "{{ virtguest_force }}"
-  when: virtguest_force != ""
-
 - name: Check if hypervisor is supported
   assert:
     that: ansible_virtualization_role | lower != "guest" or
