@@ -9,7 +9,10 @@ and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0
 
 * Users can be created with additional groups.
 * Users may be restricted from calling sudo.
-* Add xscreensaver in place of xfce4-screensaver, with a timeout of 5 minutes.
+* Add xscreensaver in place of xfce4-screensaver. It is configured with a
+  timeout of 5 minutes for bare metal installations, while VM installations
+  have no screensaver/screen lock by default, assuming that the host will do
+  that.
 
 ## [0.1.2] - 2019-08-04
 
